[Win] Gracefully recover from missing 'naturalSize' parameter for media https://bugs.webkit.org/show_bug.cgi?id=129278

Reviewed by Eric Carlson.

* platform/graphics/avfoundation/cf/AVFoundationCFSoftLinking.h: Add declaration for
missing function call.
* platform/graphics/avfoundation/cf/MediaPlayerPrivateAVFoundationCF.cpp:
(WebCore::MediaPlayerPrivateAVFoundationCF::assetStatus): Don't treat missing 'naturalSize'
as a fatal error.
(WebCore::MediaPlayerPrivateAVFoundationCF::tracksChanged): Handle case of asset track
not being available yet.
(WebCore::MediaPlayerPrivateAVFoundationCF::sizeChanged): If the 'naturalSize' is empty,
use the Player Item's 'presentationSize' instead.
(WebCore::AVFWrapper::processNotification): Add missing handler for duration changed.


Canonical link: https://commits.webkit.org/147367@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164660 268f45cc-cd09-0410-ab3c-d52691b4dbfc